--- a/user-account-service/src/main/resources/application.yml
+++ b/user-account-service/src/main/resources/application.yml
@@ -13,27 +13,39 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: srimanodwa4@gmail.com
-    password: asdfl
-  properties:
-    mail.smtp.ssl.trust: smtp.gmail.com
-    mail.smtp.starttls.enable: true
-    mail.smtp.auth: true
-  logging:
-    level:
-      root: info
-    logback:
-      rollingpolicy:
-        file-name-pattern: /var/log/xtrade-user-account-%d{yyyy-MM-dd}.%i.log
-        max-file-size: 10MB
-        max-history: 30
-        total-size-cap: 100GB
+    username: debasisdhal84@gmail.com
+    password: lqzm ncoc uemp zvtk
+    properties:
+      mail.smtp.ssl.trust: smtp.gmail.com
+      mail.smtp.starttls.enable: true
+      mail.smtp.auth: true
+  thymeleaf:
+    prefix: file:///${eXtrade.template.dir}
 
-  springdoc:
-    api-docs:
-      enabled: true
-      path: /apidoc
-    swagger-ui:
-      path: /swaggerui.html
-      enabled: true
+logging:
+  level:
+    root: info
+  logback:
+    rollingpolicy:
+      file-name-pattern: /var/log/xtrade-user-account-%d{yyyy-MM-dd}.%i.log
+      max-file-size: 10MB
+      max-history: 30
+      total-size-cap: 100GB
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /apidoc
+  swagger-ui:
+    path: /swaggerui.html
+    enabled: true
+
+
+eXtrade:
+  template:
+    dir: ${user.home}/projectworkspaceds/templates/
+  customer:
+    weblink: http://localhost:8088/
+
+
 
